--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "rollup-date-time-utils",
   "version": "1.0.0",
   "description": "A testing date-time utility library.",
-  "main": "index.js",
-  "scripts": {},
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "rollup -c"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-typescript": "^11.1.1",
+    "rollup": "^3.23.0",
+    "rollup-plugin-dts": "^5.3.0",
+    "tslib": "^2.5.2",
     "typescript": "^5.0.4"
   }
 }
