--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,11 @@
     "skipLibCheck": true,
 
     "declaration": true,
-    "declarationDir": "dist/types",
+    "declarationDir": "types",
     "sourceMap": true,
     "outDir": "dist",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "emitDeclarationOnly": true
   },
   "include": ["src/**/*"]
 }
