--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "rollup-date-time-utils",
   "version": "1.0.0",
   "description": "A testing date-time utility library.",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "rollup -c"
   },
