--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A testing date-time utility library.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "types": "dist/index.d.ts",
+  "files": ["dist"],
   "scripts": {
-    "build": "rollup -c"
+    "build": "rm -rf dist && rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.1",
     "rollup": "^3.23.0",
     "rollup-plugin-dts": "^5.3.0",
