--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
+    "rootDir": ".",
 
     "target": "ES2020",
     "module": "ESNext",
@@ -11,11 +12,12 @@
     "skipLibCheck": true,
 
     "declaration": true,
-    "declarationDir": "types",
+    "emitDeclarationOnly": true,
+    "declarationDir": "dist/types",
     "sourceMap": true,
-    "outDir": "dist",
     "allowSyntheticDefaultImports": true,
-    "emitDeclarationOnly": true
+
+    "resolveJsonModule": true,
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "rollup.config.ts"]
 }
