--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
-  "name": "rollup-date-time-utils",
-  "version": "1.0.0",
-  "description": "A testing date-time utility library.",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "files": ["dist"],
-  "scripts": {
-    "build": "rm -rf dist && rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@rollup/plugin-typescript": "^11.1.1",
-    "rollup": "^3.23.0",
-    "rollup-plugin-dts": "^5.3.0",
-    "tslib": "^2.5.2",
-    "typescript": "^5.0.4"
-  }
+	"name": "rollup-date-time-utils",
+	"version": "1.0.0",
+	"description": "A testing date-time utility library.",
+	"main": "dist/cjs/index.js",
+	"module": "dist/esm/index.js",
+	"files": [
+		"dist"
+	],
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"import": "./dist/esm/index.js",
+			"default": "./dist/cjs/index.js"
+		},
+		"./libs": {
+			"types": "./dist/esm/types/libs/index.d.ts",
+			"import": "./dist/esm/libs/index.js",
+			"default": "./dist/cjs/libs/index.js"
+		}
+	},
+	"scripts": {
+		"build": "rm -rf dist && rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@rollup/plugin-commonjs": "^25.0.0",
+		"@rollup/plugin-node-resolve": "^15.0.2",
+		"@rollup/plugin-terser": "^0.4.3",
+		"@rollup/plugin-typescript": "^11.1.1",
+		"rollup": "^3.23.0",
+		"rollup-plugin-dts": "^5.3.0",
+		"tslib": "^2.5.2",
+		"typescript": "^5.0.4"
+	}
 }
