--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,23 @@
 {
-  "compilerOptions": {
-    /* Visit https://aka.ms/tsconfig to read more about this file */
-    "rootDir": ".",
+	"compilerOptions": {
+		/* Visit https://aka.ms/tsconfig to read more about this file */
+		"rootDir": ".",
 
-    "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
+		"target": "ES2020",
+		"module": "ESNext",
+		"moduleResolution": "node",
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"strict": true,
+		"skipLibCheck": true,
 
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "declarationDir": "dist/types",
-    "sourceMap": true,
-    "allowSyntheticDefaultImports": true,
+		"declaration": true,
+		"emitDeclarationOnly": true,
+		"declarationDir": "dist/types",
+		"sourceMap": true,
+		"allowSyntheticDefaultImports": true,
 
-    "resolveJsonModule": true,
-  },
-  "include": ["src/**/*", "rollup.config.ts"]
+		"resolveJsonModule": true
+	},
+	"include": ["src/**/*", "rollup.config.ts"]
 }
