build(wip): set multiple entry points

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,10 @@
 		"strict": true,
 		"skipLibCheck": true,
 
+		"lib": ["ESNext"],
+
 		"declaration": true,
-		"emitDeclarationOnly": true,
-		"declarationDir": "dist/types",
+		"declarationDir": "dist",
 		"sourceMap": true,
 		"allowSyntheticDefaultImports": true,
 
