--- a/package.json
+++ b/package.json
@@ -3,25 +3,14 @@
 	"version": "1.0.3",
 	"description": "A testing date-time utility library.",
 	"main": "dist/cjs/index.js",
-	"module": "dist/esm/index.js",
+	"module": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"files": [
 		"dist"
 	],
-	"exports": {
-		".": {
-			"types": "./dist/index.d.ts",
-			"import": "./dist/esm/index.js",
-			"default": "./dist/cjs/index.js"
-		},
-		"./libs": {
-			"types": "./dist/esm/types/libs/index.d.ts",
-			"import": "./dist/esm/libs/index.js",
-			"default": "./dist/cjs/libs/index.js"
-		}
-	},
 	"scripts": {
-		"build": "rm -rf dist && rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript"
+		"build": "rm -rf dist && rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
+		"postbuild": "node ./scripts/frankBuild.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -29,9 +18,14 @@
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "^25.0.0",
 		"@rollup/plugin-node-resolve": "^15.0.2",
+		"@rollup/plugin-terser": "^0.4.3",
 		"@rollup/plugin-typescript": "^11.1.1",
+		"@types/node": "^20.2.3",
+		"@types/rollup-plugin-generate-package-json": "^3.2.0",
+		"fs-extra": "^11.1.1",
 		"rollup": "^3.23.0",
 		"rollup-plugin-dts": "^5.3.0",
+		"rollup-plugin-generate-package-json": "^3.2.0",
 		"tslib": "^2.5.2",
 		"typescript": "^5.0.4"
 	}
